--- a/my_nutri/pubspec.yaml
+++ b/my_nutri/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   firebase_auth: ^4.17.9
   cloud_firestore: ^4.15.9
   flutter_launcher_icons: ^0.13.1
+  convex_bottom_bar: ^3.2.0
+  lottie: ^3.1.2
+  smooth_page_indicator: ^1.2.0+3
 
 dev_dependencies:
   flutter_test:
